[project]
name = "QMS"
version = "0.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
scripts = {qms = "main:main"}
dependencies = ["pyside6", "matplotlib", "pyserial"]

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]

[tool.ruff]
select = ["E", "F", "N", "B", "A", "RET"]
line-length = 120
target-version = "py310"
exclude = ["build", ".venv", "src/layouts"]

[tool.black]
line-length = 120

[tool.mypy]
exclude = ["build", ".venv", "src/layouts"]
ignore_missing_imports = true
explicit_package_bases = true
